# NatGhost

./: LICENSE  README.md  captured_packets.pcap
core/: .udp_flooder.py.swp  DynamicStunScanner.py  adaptive_probe.py  fingerprinter.py  holekeeper.py  ip.txt  kill_zombies.sh  listener.py  stun_packet  stundiscoverer.py  tcp_trigger.py  udp_flooder.py
core/archive/: nat_sniffer.py  parallel_dns_discoverer.py  read_shm.py  stundiscoverer.py
kernel/: a  blast_controller.c  blast_controller.h  burst_blaster  burst_blaster.c  burst_controller  burst_controller.c  burst_predictive.cpp  burst_wawe.c  epoll_burst  epoll_burst.c  full_spectrum_randomness_analyzer.cpp  listener.c  listener.h  map_reader.c  mapping  memory_map.c  memory_pool_optimization.c  nat  nat_analyzer.c  natghost  net.c  net.h  optimal  randomness_analyzer.cpp  raw_socket_firer_threads.h  reader  sniff_listener.c  statistical_collision_analysis.c  time_utils.c
kernel/archive/: brust_general_explanation.c  burst_controller  burst_controller.c  gen_pool  port_histogram.cpp  raw_socket_firer.c  raw_socket_firer.h  raw_socket_firer_threads.c  stun_packet.c  time_utils.h
kernel/output/: asd  map_reader
listener_engine/: CMakeLists.txt
listener_engine/include/: net_headers.h
listener_engine/src/: main.c
natghost_forge/: CMakeLists.txt
natghost_forge/include/natghost/: checksum.h  config.h  network_core.h
natghost_forge/src/: checksum.c  main.c  network_core.c
